removing spatie settings and going with my version

--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,13 @@
         "php": "^8.1",
         "filp/whoops": "^2.18",
         "guzzlehttp/guzzle": "^7.2",
+        "inertiajs/inertia-laravel": "^0.6.8",
         "laragear/two-factor": "^2.1",
         "laravel/breeze": "^1.29",
         "laravel/framework": "^10.10",
-        "laravel/sanctum": "^3.3",
+        "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "spatie/laravel-settings": "^3.4"
+        "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
