--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "@vitejs/plugin-vue": "^6.0.1",
-        "autoprefixer": "^10.4.21",
+        "@inertiajs/vue3": "^1.0.0",
+        "@tailwindcss/forms": "^0.5.3",
+        "@vitejs/plugin-vue": "^5.0.0",
+        "autoprefixer": "^10.4.12",
         "axios": "^1.12.1",
         "laravel-vite-plugin": "^1.3.0",
-        "postcss": "^8.5.6",
-        "tailwindcss": "^4.1.13",
+        "postcss": "^8.4.31",
+        "tailwindcss": "^3.2.1",
         "vite": "^5.4.20",
-        "vue": "^3.5.21"
+        "vue": "^3.4.0"
     },
     "dependencies": {
         "@inertiajs/vue3": "^2.1.6"
