--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "spatie/image": "^3.8",
+        "spatie/image-optimizer": "^1.8",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
