--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "dev": "vite build --watch",
+        "dev": "vite build --mode=development",
+        "watch": "vite build --watch --mode=development",
         "build": "vite build"
     },
     "devDependencies": {
@@ -18,6 +19,13 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
-        "@inertiajs/vue3": "^2.1.6"
+        "@inertiajs/vue3": "^2.1.6",
+        "@vueuse/core": "^13.9.0",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "lucide-vue-next": "^0.544.0",
+        "reka-ui": "^2.5.0",
+        "tailwind-merge": "^3.3.1",
+        "tailwindcss-animate": "^1.0.7"
     }
 }
