--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "spatie/image": "^3.8",
-        "spatie/image-optimizer": "^1.8",
-        "tightenco/ziggy": "^2.0"
+        "spatie/image-optimizer": "^1.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
