--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
     "private": true,
     "type": "module",
-    "scripts": {
+  "scripts": {
         "dev": "vite build --mode=development",
         "watch": "vite build --watch --mode=development",
-        "build": "vite build"
-    },
+        "build": "vite build",
+        "lint": "eslint --ext .js,.vue resources/js",
+        "lint:fix": "eslint --ext .js,.vue resources/js --fix",
+        "format": "prettier -c .",
+        "format:write": "prettier -w ."
+  },
     "devDependencies": {
         "@inertiajs/vue3": "^1.0.0",
         "@tailwindcss/forms": "^0.5.3",
