--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,11 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The skeleton application for the Laravel framework.",
-    "keywords": ["laravel", "framework"],
-    "license": "MIT",
+    "keywords": [
+        "laravel",
+        "framework"
+    ],
+    "license": "Elastic-2.0",
     "require": {
         "php": "^8.1",
         "filp/whoops": "^2.18",
