--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "lucide-vue-next": "^0.544.0",
+        "chart.js": "^4.4.6",
         "reka-ui": "^2.5.0",
+        "vue-chartjs": "^5.3.0",
         "tailwind-merge": "^3.3.1",
         "tailwindcss-animate": "^1.0.7"
     }
