--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
         "@vitejs/plugin-vue": "^5.2.4",
         "autoprefixer": "^10.4.12",
         "axios": "^1.12.1",
+        "eslint": "^8.57.0",
+        "eslint-plugin-vue": "^9.23.0",
         "laravel-vite-plugin": "^1.3.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.2.1",
         "vite": "^5.4.20",
-        "vue": "^3.4.0"
+        "vue": "^3.4.0",
+        "vue-eslint-parser": "^9.4.3"
     },
     "dependencies": {
         "@inertiajs/vue3": "^2.1.6",
